--- a/GoogleWebStorage/wwwroot/css/site.css
+++ b/GoogleWebStorage/wwwroot/css/site.css
@@ -3,7 +3,10 @@ body {
     color: #b7efc5;
 }
 
-
+.hero-section {
+    background-image: url("/Images/BirdOnCactus.png");
+    background-size: 100% 100%;
+}
 
 .story-glimpses .story-img .story-quote {
     background-color: rgba(0, 0, 0, 0.7);
